<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorBlancoNuestro"
    android:id="@+id/layout_registro">

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/tv_registro"
        android:textSize="@dimen/letrasTitulosGrandes"
        android:textColor="@color/colorRojo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/robotomedium"/>

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="300dp"
        android:layout_height="210dp"
        android:layout_marginTop="110dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/esquinas_redondeadas"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistro">


        <EditText
            android:id="@+id/etUserRegistro"
            android:layout_width="200dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/letrasNormales"
            android:hint="@string/hint_user"
            android:inputType="textPersonName"
            android:textColor="@color/colorAzulOscuro"
            android:textColorHint="@color/colorAzulOscuro"
            android:fontFamily="@font/robotolight"
            android:drawableRight="@drawable/ic_people_foreground"
            />

        <EditText
            android:id="@+id/etPasswordRegistro"
            android:layout_width="200dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:textSize="@dimen/letrasNormales"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/colorAzulOscuro"
            android:textColorHint="@color/colorAzulOscuro"
            android:fontFamily="@font/robotolight"
            android:drawableRight="@drawable/ic_candado_foreground"
            />

        <EditText
            android:id="@+id/etEmailRegistro"
            android:layout_width="200dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/letrasNormales"
            android:hint="@string/hint_correo"
            android:inputType="textPersonName"
            android:textColor="@color/colorAzulOscuro"
            android:textColorHint="@color/colorAzulOscuro"
            android:fontFamily="@font/robotolight"
            android:drawableRight="@drawable/ic_mail_foreground"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/next"
        app:layout_constraintBottom_toBottomOf="@+id/llLogin"
        app:layout_constraintEnd_toEndOf="@+id/llLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/llLogin"
        app:layout_constraintTop_toTopOf="@+id/llLogin"
        android:onClick="registrar"
        />

    <Button
        android:id="@+id/btnAtrasLogin"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/esquinas_izquierdas_redondeadas"
        android:onClick="accesoLoginActivity"
        android:text="@string/btn_atras_registro"
        android:textColor="@color/colorRojo"
        android:textSize="@dimen/letrasBotones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLogin"
        android:fontFamily="@font/robotomedium"/>

</androidx.constraintlayout.widget.ConstraintLayout>